@@ -8879,3 +8879,5 @@ in this changeset (new minor version) rather than bug fixes:
 2017-09-02 (bug)[0e4d88] replace command, delete trace kills namespace (porter)
 
 --- Released 8.7a1, September 8, 2017 --- http://core.tcl.tk/tcl/ for details
+
+2017-12-11 (TIP 490) add oo support for msgcat => msgcat 1.6.2 (oehlmann)
